# erlang-tensorflow-rpc

./: README.md  rebar.config
c_src/: CMakeLists.txt  Makefile  a.sh  cppflow.cxx  load.cpp  main.cpp  model.cpp  tflite.cxx
script/: tf_convert.py
src/: model.app.src  model_app.erl  model_rpc.erl  model_sup.erl
